# cree-sro-syllabics

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  cree_sro_syllabics.py  crk_orthography.py  pyproject.toml  setup.cfg  setup.py
crk_orthography/: __init__.py  __main__.py  __version__.py  cli.py  sro.py  sro2syllabics.py  syllabics.py  syllabics2sro.py
docs/: Makefile  conf.py  glossary.rst  index.rst  make.bat
libexec/: .gitignore  Makefile  libfsm.py  parse_foma.py
tests/: test_syllabics_conversion.py
