[tool.poetry]
name = "cree_sro_syllabics"
version = "2021.4.16"
homepage = "https://github.com/eddieantonio/cree-sro-syllabics"
description = "Convert between Western Cree SRO and syllabics"
license = "mit"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Text Processing :: Linguistic"
]
authors = ["Eddie Antonio Santos <Eddie.Santos@nrc-cnrc.gc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^4.3.0"
pytest-cov = "^2.6.1"
recommonmark = "^0.5.0"
sphinx = "^1.8.4"
sphinx-autobuild = "^0.7.1"
